test/ui/src/compile_fail/std/dbg_props_fmt.rs
fn main() {
    emit::dbg!(#[emit::fmt("#?")] a: 42);
}
