test/ui/src/compile_fail/std/dbg_props_fmt.stderr
error: `fmt` isn't valid here; it can only be applied to values in templates or event macros
 --> src/compile_fail/std/dbg_props_fmt.rs:2:16
  |
2 |     emit::dbg!(#[emit::fmt("#?")] a: 42);
  |                ^^^^^^^^^^^^^^^^^^^^^^^^
